--- a/Raytracer/Raytracer.vcxproj
+++ b/Raytracer/Raytracer.vcxproj
@@ -156,16 +156,24 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="camera.cpp" />
+    <ClCompile Include="dielectric.cpp" />
     <ClCompile Include="hittable.cpp" />
     <ClCompile Include="hittable_list.cpp" />
+    <ClCompile Include="lambertian.cpp" />
+    <ClCompile Include="material.cpp" />
+    <ClCompile Include="metal.cpp" />
     <ClCompile Include="ray.cpp" />
     <ClCompile Include="Raytracer.cpp" />
     <ClCompile Include="sphere.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="camera.h" />
+    <ClInclude Include="dielectric.h" />
     <ClInclude Include="hittable.h" />
     <ClInclude Include="hittable_list.h" />
+    <ClInclude Include="lambertian.h" />
+    <ClInclude Include="material.h" />
+    <ClInclude Include="metal.h" />
     <ClInclude Include="random.h" />
     <ClInclude Include="ray.h" />
     <ClInclude Include="sphere.h" />
